creusot/tests/should_fail/bug/222.coma

module C222_A_IsTrue_Impl
  type self
  let%span s2220 = "../222.rs" 13 14 13 34
  use prelude.Int
  function mktrue'0 [#"../222.rs" 7 4 7 22] (_1 : ()) : int
  let rec mktrue'0 (_1:()) (return'  (ret:int))= any
    [ return' (result:int)-> {result = mktrue'0 _1} (! return' {result}) ]
    
  constant _1  : ()
  function is_true [#"../222.rs" 14 4 14 16] (_1 : ()) : ()
  goal vc_is_true : [%#s2220] mktrue'0 () <= 10
end
module Core_Option_Option_Type
  type t_option 't =
    | C_None
    | C_Some 't
    
  function any_l (_ : 'b) : 'a
  let rec none < 't > (input:t_option 't) (ret  )= any
    [ good -> {C_None  = input} (! ret) | bad -> {C_None  <> input} {false} any ]
    
  let rec some < 't > (input:t_option 't) (ret  (field_0:'t))= any
    [ good (field_0:'t)-> {C_Some field_0 = input} (! ret {field_0})
    | bad (field_0:'t)-> {C_Some field_0 <> input} {false} any ]
    
end
module C222_Once_Type
  use Core_Option_Option_Type as Option'0
  type t_once 't =
    | C_Once (Option'0.t_option 't)
    
  function any_l (_ : 'b) : 'a
  let rec t_once < 't > (input:t_once 't) (ret  (field_0:Option'0.t_option 't))= any
    [ good (field_0:Option'0.t_option 't)-> {C_Once field_0 = input} (! ret {field_0})
    | bad (field_0:Option'0.t_option 't)-> {C_Once field_0 <> input} {false} any ]
    
end
module C222_UsesInvariant
  type t
  let%span s2220 = "../222.rs" 40 42 42 1
  let%span s2221 = "../222.rs" 38 11 38 24
  let%span s2222 = "../222.rs" 40 25 40 26
  let%span s2223 = "../222.rs" 39 10 39 26
  let%span span4 = "../222.rs" 30 8 30 12
  let%span span5 = "../../../../../creusot-contracts/src/resolve.rs" 26 20 26 34
  let%span span6 = "" 0 0 0 0
  let%span span7 = "../../../../../creusot-contracts/src/std/option.rs" 29 0 140 1
  let%span span8 = "" 0 0 0 0
  use Core_Option_Option_Type as Option'0
  use prelude.Borrow
  predicate invariant'3 (self : borrowed (Option'0.t_option t))
  let rec invariant'3 (self:borrowed (Option'0.t_option t)) (return'  (ret:bool))= any
    [ return' (result:bool)-> {result = invariant'3 self} (! return' {result}) ]
    
  predicate inv'2 (_x : borrowed (Option'0.t_option t))
  let rec inv'2 (_x:borrowed (Option'0.t_option t)) (return'  (ret:bool))= any
    [ return' (result:bool)-> {result = inv'2 _x} (! return' {result}) ]
    
  axiom inv'2 : forall x : borrowed (Option'0.t_option t) . inv'2 x = true
  use C222_Once_Type as Once'0
  predicate invariant'2 (self : borrowed (Once'0.t_once t))
  let rec invariant'2 (self:borrowed (Once'0.t_once t)) (return'  (ret:bool))= any
    [ return' (result:bool)-> {result = invariant'2 self} (! return' {result}) ]
    
  predicate inv'1 (_x : borrowed (Once'0.t_once t))
  let rec inv'1 (_x:borrowed (Once'0.t_once t)) (return'  (ret:bool))= any
    [ return' (result:bool)-> {result = inv'1 _x} (! return' {result}) ]
    
  axiom inv'1 : forall x : borrowed (Once'0.t_once t) . inv'1 x = true
  predicate invariant'1 (self : Option'0.t_option t)
  let rec invariant'1 (self:Option'0.t_option t) (return'  (ret:bool))= any
    [ return' (result:bool)-> {result = invariant'1 self} (! return' {result}) ]
    
  predicate inv'0 (_x : Option'0.t_option t)
  let rec inv'0 (_x:Option'0.t_option t) (return'  (ret:bool))= any
    [ return' (result:bool)-> {result = inv'0 _x} (! return' {result}) ]
    
  axiom inv'0 : forall x : Option'0.t_option t . inv'0 x = true
  predicate invariant'0 [#"../222.rs" 29 4 29 30] (self : Once'0.t_once t) =
    [%#span4] true
  let rec invariant'0 (self:Once'0.t_once t) (return'  (ret:bool))= any
    [ return' (result:bool)-> {result = invariant'0 self} (! return' {result}) ]
    
  use prelude.Intrinsic
  predicate resolve'1 (self : borrowed (Once'0.t_once t)) =
    [%#span5]  ^ self =  * self
  let rec resolve'1 (self:borrowed (Once'0.t_once t)) (return'  (ret:bool))= any
    [ return' (result:bool)-> {result = resolve'1 self} (! return' {result}) ]
    
  predicate resolve'0 (self : Option'0.t_option t)
  let rec resolve'0 (self:Option'0.t_option t) (return'  (ret:bool))= any
    [ return' (result:bool)-> {result = resolve'0 self} (! return' {result}) ]
    
  let rec take'0 (self:borrowed (Option'0.t_option t)) (return'  (ret:Option'0.t_option t))= {[@expl:precondition] [%#span6] inv'2 self}
    any
    [ return' (result:Option'0.t_option t)-> {[%#span8] inv'0 result}
      {[%#span7] result =  * self /\  ^ self = Option'0.C_None}
      (! return' {result}) ]
    
  let rec uses_invariant (x:borrowed (Once'0.t_once t)) (return'  (ret:()))= {[%#s2222] inv'1 x}
    {[%#s2221] invariant'0 ( * x)}
    (! bb0
    [ bb0 = s0
      [ s0 = Once'0.t_once <t> { * x}
          (fun (r0'0:Option'0.t_option t) ->
            Borrow.borrow_final <Option'0.t_option t> {r0'0} {Borrow.inherit_id (Borrow.get_id x) 1}
              (fun (_ret':borrowed (Option'0.t_option t)) ->
                 [ &_5 <- _ret' ] 
                Once'0.t_once <t> { * x}
                  (fun (l_0'0:Option'0.t_option t) ->
                     [ &x <- { x with current = (Once'0.C_Once ( ^ _5) : Once'0.t_once t) ; } ] 
                    s1)))
      | s1 = -{inv'0 ( ^ _5)}- s2
      | s2 = take'0 {_5} (fun (_ret':Option'0.t_option t) ->  [ &_4 <- _ret' ] s3)
      | s3 = bb1 ]
      
    | bb1 = s0
      [ s0 = {[@expl:type invariant] inv'0 _4} s1
      | s1 = -{resolve'0 _4}- s2
      | s2 = {[@expl:type invariant] inv'1 x} s3
      | s3 = -{resolve'1 x}- s4
      | s4 = bb2 ]
      
    | bb2 = s0 [ s0 =  [ &_0 <- [%#s2220] () ] s1 | s1 = return' {_0} ]  ]
    )
    [ & _0 : () = any_l () : ()
    | & x : borrowed (Once'0.t_once t) = x
    | & _4 : Option'0.t_option t = any_l () : Option'0.t_option t
    | & _5 : borrowed (Option'0.t_option t) = any_l () : borrowed (Option'0.t_option t) ]
     [ return' (result:())-> {[@expl:postcondition] [%#s2223] invariant'0 ( ^ x)} (! return' {result}) ] 
end
module C222_Impl0
  
end
module C222_Impl1
  type t
end
